  * Upgrade: binary compatibility improved for Windows releases.
  * Bug fix: if default save folder is changed it's now part of library scanned
    folders.
  * Bug fix: smart search engine wasn't notifying when it was done if there
    were no results.
  * Bug fix: several crashes and errors fixed.
  * Bug fix: partial download dialog for cloud downloads would sometimes appear
    empty.
 -- FrostWire Team <contact@frostwire.com>  Tue, 19 Feb 2013 17:38:57 -0500

frostwire (5.5.3) stable; urgency=high
  * Bug fix: freeze on Windows XP. (Windows release only)
 -- FrostWire Team <contact@frostwire.com>  Tue, 05 Feb 2013 19:00:00 -0500
	
frostwire (5.5.2) stable; urgency=high
  * Upgrade: Now 'Movies' or 'My Videos' folder is included by default on new
    installs since we now have a built-in video player.
  * Upgrade: The Smart Search engine can now be disabled. No torrents will be
    indexed and no search against the local database will be performed if
    disabled.
  * UI fix: Video Player Window Title now shows the file name being played.
  * UI fix: Library > "Finished Downloads" renamed to "Default Save Folder"
  * UI fix: When browsing another device on the Wi-Fi network newest shared
    files are shown at the top of the table.
  * Bug fix: On first installation FrostWire wasn't able to add 'From Devices'
    folder to the Library.
  * Bug fix: When restoring default settings FrostWire was not restoring 
    default library folders.
  * Bug fix: Player remembers volume level from last song played.
  * Bug fix: Sends correct file sizes on HTTP headers for shared files that
    have changed in size after being shared.
  * Bug fix: Repeat media play setting with only one item.
  * Bug fix: New mime detector based on a bigger table.
  * Bug fix: Video player doesn't skip frames when resuming from pause.
  * Bug fix: Video player doesn't move frames when paused and volume slider
    is being moved.